genesis/v673/README.md
# GENESIS v673 — KLYN Self-Evolving Operating System Layer

> **Mission:** An operating system that mutates its own modules through governed evolution cycles.

> Evolution lineage: depends on `v672`.

## Architecture — 10 core TypeScript modules

| # | Module | Role |
|---|--------|------|
| 1 | `SelfEvolvingOSKernel` | kernel — module registry & health |
| 2 | `EvolutionaryOSOrchestrator` | orchestrator — ordered boot + reverse shutdown |
| 3 | `SelfEvolvingRuntime` | runtime — guarded lifecycle state machine |
| 4 | `EvolutionGovernanceController` | controller — policy enforcement & quotas |
| 5 | `AdaptiveMutationEngine` | engine — bounded work queue + tick loop |
| 6 | `EvolutionStateRegistry` | registry — O(1) LRU entity store |
| 7 | `EvolutionaryCoordinationHub` | coordinator — contract-gated message bus |
| 8 | `EvolutionTelemetryObserver` | observer — ring-buffered telemetry |
| 9 | `HostEnvironmentAdapter` | adapter — environment probe & boundary calls |
| 10 | `SelfEvolvingOSPlatform` | platform — composition root & public API |

## Contracts (event topics)

```
  v673.engine.tick
  v673.mutation.proposed
  v673.mutation.applied
  v673.metric.recorded
```

## Quickstart

```bash
# materialize / regenerate this layer (idempotent)
node genesis/forge.mjs v673

# typecheck the whole genesis lineage (strict)
node_modules/.bin/tsc --noEmit -p genesis/tsconfig.json

# run this layer self-test
bun run genesis/v673/smoke.ts

# one-shot bootstrap (Termux / Linux)
bash genesis-v673-bootstrap.sh --smoke
```

## Boot a layer in code

```ts
import { createLayer } from './SelfEvolvingOSPlatform.js';

const layer = createLayer();
const report = await layer.start();
console.log(layer.health(), report.totalMs);
await layer.stop();
```

## Push workflow

```bash
# commit this layer + push to GitHub (origin) and GitLab (gitlab)
bash genesis/push-evolution.sh v673

# or land everything
bash genesis/push-evolution.sh all
```
