genesis/v681/README.md
# GENESIS v681 — Autonomous DevOps Civilization Layer

> **Mission:** A civilization of pipelines that plan, verify, release, and heal deployments end to end.

> Evolution lineage: depends on `v680`.

## Architecture — 10 core TypeScript modules

| # | Module | Role |
|---|--------|------|
| 1 | `AutonomousDevOpsKernel` | kernel — module registry & health |
| 2 | `DevOpsPipelineOrchestrator` | orchestrator — ordered boot + reverse shutdown |
| 3 | `AutonomousDevOpsRuntime` | runtime — guarded lifecycle state machine |
| 4 | `DevOpsGovernanceController` | controller — policy enforcement & quotas |
| 5 | `ContinuousDeliveryEngine` | engine — bounded work queue + tick loop |
| 6 | `ReleaseStateRegistry` | registry — O(1) LRU entity store |
| 7 | `DevOpsCoordinationHub` | coordinator — contract-gated message bus |
| 8 | `DevOpsTelemetryObserver` | observer — ring-buffered telemetry |
| 9 | `InfrastructureEnvironmentAdapter` | adapter — environment probe & boundary calls |
| 10 | `AutonomousDevOpsPlatform` | platform — composition root & public API |

## Contracts (event topics)

```
  v681.engine.tick
  v681.pipeline.run
  v681.release.promoted
  v681.metric.recorded
```

## Quickstart

```bash
# materialize / regenerate this layer (idempotent)
node genesis/forge.mjs v681

# typecheck the whole genesis lineage (strict)
node_modules/.bin/tsc --noEmit -p genesis/tsconfig.json

# run this layer self-test
bun run genesis/v681/smoke.ts

# one-shot bootstrap (Termux / Linux)
bash genesis-v681-bootstrap.sh --smoke
```

## Boot a layer in code

```ts
import { createLayer } from './AutonomousDevOpsPlatform.js';

const layer = createLayer();
const report = await layer.start();
console.log(layer.health(), report.totalMs);
await layer.stop();
```

## Push workflow

```bash
# commit this layer + push to GitHub (origin) and GitLab (gitlab)
bash genesis/push-evolution.sh v681

# or land everything
bash genesis/push-evolution.sh all
```
